compiler/testData/diagnostics/testsWithJsStdLib/name/topLevelMethodAndProperty.kt
package foo

<!JS_NAME_CLASH!>fun bar()<!> = 23

<!JS_NAME_CLASH!>konst bar<!> = 32